k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: investorcenter-ingress
  namespace: investorcenter
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:360358043271:certificate/2ad9333d-8234-4232-b412-8b9af8ebd225
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  rules:
  - host: investorcenter.ai
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: investorcenter-backend-service
            port:
              number: 8080
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
      - path: /
        pathType: Prefix
        backend:
          service:
            name: investorcenter-frontend-service
            port:
              number: 3000
  - host: www.investorcenter.ai
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: investorcenter-backend-service
            port:
              number: 8080
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
      - path: /
        pathType: Prefix
        backend:
          service:
            name: investorcenter-frontend-service
            port:
              number: 3000
